--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
 		<title>Last.fm Widget</title>
 
 		<style>
-			*, *::before, *::after {
-				box-sizing: border-box;
-			}
+			*, *::before, *::after { box-sizing: border-box; }
 
-			* {
-				margin: 0;
-			}
+			* { margin: 0; }
 
 			body {
 				height: 100vh;
@@ -18,9 +14,7 @@
 				-webkit-font-smoothing: antialiased;
 			}
 
-			body {
-				height: 100vh;
-			}
+			body { height: 100vh; }
 
 			img, picture, video, canvas, svg {
 				display: block;
